# vscode_cmake_template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Square/: CMakeLists.txt  Square.cpp  Square.h
tests/: CMakeLists.txt  SquareTest.cpp
